<resources>
	<string name="app_name">Reverse Beacon Client</string>

	<string name="title" formatted="false">%1$d spots / min (%2$d total)</string>

	<string name="drawer_log">Station list</string>
	<string name="drawer_filters">Filters</string>
	<string name="drawer_settings">Settings</string>
	<string name="drawer_info">About, help and feedback</string>
	<string name="drawer_debug">Debug</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>

	<string name="text_welcome">Welcome to the Reverse Beacon Client app.
		The Reverse Beacon Network requires that you enter a callsign to connect to their telnet servers.
		Please enter your callsign here:
	</string>
	<string name="text_welcome_below">For more information about the reverse beacon network, see <a href="http://reversebeacon.net">http://reversebeacon.net</a>.
		The source code for this app is on GitHub: <a href="https://github.com/camilstaps/ReverseBeaconClient">https://github.com/camilstaps/ReverseBeaconClient</a>.
	</string>
	<string name="welcome_callsign_hint">PD7LOL</string>
	<string name="welcome_button_text">Continue</string>
	<string name="welcome_instructions_button_text">Start</string>

	<string name="text_info"><![CDATA[
		<h2>Instructions</h2>
		<p>When the app opens, you see a list that is continuously updated with spots from the Reverse Beacon Network (RBN).</p>
		<p>Slide from the left edge to open the menu. From there, you can change the filters, with which you can filter the spots.</p>
		<p>In the settings, you can change the callsign you are using to \'login\' at the RBN, and change other preferences.</p>
		<p>You can always get back to these instructions using the help item in the menu.</p>
		<h2>Acknowledgements</h2>
		<p>For more information about the Reverse Beacon Network project, see <a href="http://www.reversebeacon.net/">reversebeacon.net</a>.</p>
		<p>Callsign resolution is done with lists by <a href="http://country-files.com">Jim Reisert</a> AD1C.</p>
		<h2>Getting help</h2>
		<p>
			If you need help, found a bug or have a feature request, please <a href="https://github.com/camilstaps/ReverseBeaconClient/issues">open an issue on GitHub</a>.
			Please mention that you are using version VERSION.
		</p>
		<h2>Author, copyright and license</h2>
		<p>The source code of this app is copyright &copy; 2017 Camil Staps.</p>
		<p>
			This app was written by <a href="https://camilstaps.nl">Camil Staps</a> PD7LOL and licensed under the GNU General Public License, version 3.
			Its source code is available at <a href="https://github.com/camilstaps/ReverseBeaconClient">github.com/camilstaps/ReverseBeaconClient</a>.
		</p>
	]]></string>

	<string name="warning_invalid_callsign">\'%1$s\' is not a valid callsign</string>
	<string name="warning_unknown_callsign">Unknown callsign class</string>
	<string name="error_load_callsigns">Could not load detailed callsign information tables</string>

	<string name="flag_content_description">Country flag</string>
	<string name="band_icon_content_description"/>

	<string name="minimum">Min</string>
	<string name="maximum">Max</string>

	<string name="qrz_link"><![CDATA[<a href="https://qrz.com/db/%1$s">QRZ</a>]]></string>

	<string name="title_activity_settings">Settings</string>

	<string name="pref_general">General</string>
	<string name="pref_callsign">Callsign</string>
	<string name="pref_callsign_summ">Your callsign (to \'login\' at the RBN)</string>
	<string name="pref_callsign_default" translatable="false"/>

	<string name="pref_advanced">Advanced</string>
	<string name="pref_host">RBN host</string>
	<string name="pref_host_summ">The telnet host to connect to</string>
	<string name="pref_host_default" translatable="false">telnet.reversebeacon.net</string>
	<string name="pref_port">RBN port</string>
	<string name="pref_port_summ">The port of the telnet host</string>
	<string name="pref_port_default" translatable="false">7000</string>

	<string name="connecting">Connecting...</string>
	<string name="listening">Listening...</string>
	<string name="connect_failed">Failed to connect.</string>
	<string name="connection_lost">Lost connection</string>
	<string name="reconnecting">Reconnecting...</string>
	<string name="reconnected">Reconnected</string>

	<string name="debug_share">Share</string>

	<string-array name="side_nav_titles">
		<item>List</item>
		<item>Filters</item>
		<item>Settings</item>
	</string-array>

	<string-array name="bands">
		<item>160m</item>
		<item>80m</item>
		<item>60m</item>
		<item>40m</item>
		<item>30m</item>
		<item>20m</item>
		<item>17m</item>
		<item>15m</item>
		<item>12m</item>
		<item>10m</item>
		<item>6m</item>
		<item>4m</item>
		<item>2m</item>
		<item>1m25</item>
		<item>70cm</item>
		<item>33cm</item>
		<item>23cm</item>
	</string-array>
	<string-array name="band_values">
		<item>16000</item>
		<item>8000</item>
		<item>6000</item>
		<item>4000</item>
		<item>3000</item>
		<item>2000</item>
		<item>1700</item>
		<item>1500</item>
		<item>1200</item>
		<item>1000</item>
		<item>600</item>
		<item>400</item>
		<item>200</item>
		<item>125</item>
		<item>70</item>
		<item>33</item>
		<item>23</item>
	</string-array>

	<string-array name="modes">
		<item>CW</item>
		<item>PSK125</item>
		<item>PSK31</item>
		<item>PSK63</item>
		<item>RTTY</item>
	</string-array>

	<string-array name="types">
		<item>BEACON</item>
		<item>CQ</item>
		<item>DX</item>
		<item>NCDXF</item>
		<item>NCDXFB</item>
	</string-array>

	<string-array name="continent_abbreviations" translatable="false">
		<item>AF</item>
		<item>AU</item>
		<item>EU</item>
		<item>NA</item>
		<item>OC</item>
		<item>SA</item>
	</string-array>

	<string-array name="continents">
		<item>Africa</item>
		<item>Australia</item>
		<item>Europe</item>
		<item>North America</item>
		<item>Oceania</item>
		<item>South America</item>
	</string-array>
</resources>