<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/pref_general">

		<EditTextPreference
			android:key="callsign"
			android:title="@string/pref_callsign"
			android:summary="@string/pref_callsign_summ"
			android:defaultValue="@string/pref_callsign_default"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_advanced">

		<EditTextPreference
			android:key="host"
			android:title="@string/pref_host"
			android:summary="@string/pref_host_summ"
			android:defaultValue="@string/pref_host_default"/>

		<EditTextPreference
			android:key="port"
			android:title="@string/pref_port"
			android:summary="@string/pref_port_summ"
			android:defaultValue="@string/pref_port_default"
			android:inputType="number"
			android:numeric="integer"
			android:maxLength="5"/>

	</PreferenceCategory>

</PreferenceScreen>