<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/drawer_main_group">
		<item
			android:id="@+id/drawer_log"
			android:icon="@drawable/ic_view_list_black_24dp"
			android:title="@string/drawer_log"/>
		<item
			android:id="@+id/drawer_filters"
			android:icon="@drawable/ic_filter_list_black_24dp"
			android:title="@string/drawer_filters"/>
	</group>

	<group android:id="@+id/drawer_settings_group">
		<item
			android:id="@+id/drawer_settings"
			android:icon="@drawable/ic_settings_black_24dp"
			android:title="@string/drawer_settings"/>
		<item
			android:id="@+id/drawer_info"
			android:icon="@drawable/ic_info_black_24dp"
			android:title="@string/drawer_info"/>
		<item
			android:id="@+id/drawer_debug"
			android:icon="@drawable/ic_developer_mode_black_24dp"
			android:title="@string/drawer_debug"/>
	</group>

</menu>