<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/activity_margin"
	android:scrollbars="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/text_welcome"
		android:textSize="16sp"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp">

		<Button
			android:id="@+id/welcome_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:text="@string/welcome_button_text"/>

		<EditText
			android:id="@+id/welcome_callsign"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/welcome_button"
			android:layout_alignBottom="@id/welcome_button"
			android:hint="@string/welcome_callsign_hint"/>

	</RelativeLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/text_welcome_below"
		android:autoLink="web"
		android:textSize="16sp"/>

</LinearLayout>